Fixed title size on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,7 +70,7 @@ html::after {
   justify-content: space-between;
   box-shadow: 0 0 20px $accent1;
   box-shadow: 0px 0px 64px -28px $fg;
-  z-index: 1;
+  z-index: 10;
 
   a {
     color: $accent1;
@@ -243,6 +243,11 @@ article {
 @media (max-width: 700px) {
   body {
     flex-direction: column-reverse;
+  }
+
+  h1 {
+    font-size: 1.5em;
+    hyphens: auto;
   }
 
   .nav-bar {
